# ChordMind

./: .gitignore  README.md  ROADMAP_LEARNING.md  docker-compose.app.yml  docker-compose.infra.yml  research_proposal.md
app/: .dockerignore  .gitignore  Dockerfile  README.md  nginx.conf  pubspec.yaml
app/android/: build.gradle.kts
app/lib/: main.dart
app/test/: api_test.dart  app_scaffold_test.dart  audio_source_test.dart  audio_store_test.dart  chord_grid_widget_test.dart  diagrams_test.dart  home_test.dart  (+20 more)
scripts/: download_datasets.py
server/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
server/app/: config.py  main.py
server/app/api/: deps.py  routes.py  schemas.py
server/app/application/: analyze_song.py
server/app/domain/: entities.py  ports.py
server/app/infrastructure/: db.py  fixtures.py  orm.py  repository.py  slots.py  youtube.py
server/app/infrastructure/analysis/: assemble.py  audio_io.py  beat.py  beat_sync.py  chords.py  key.py  manifest.py  noise_metrics.py  onnx_infer.py  slot.py  stft.py  vote_decode.py
server/chordmind_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
server/tests/: conftest.py  test_analyze_file_endpoint.py  test_analyze_song.py  test_api.py  test_domain.py  test_repository.py  test_slots.py
server/tests/analysis/: test_assemble.py  test_audio_io.py  test_beat.py  test_beat_sync.py  test_denoise_gate.py  test_key.py  test_noise_metrics.py  test_onnx_infer.py  test_parity.py  test_vote_decode.py
server/tests/fixtures/: golden_btc.json  make_golden.py
tool/: sync_models.sh
(+121 files in other folders)
